# scratchformers

./: .gitignore  gpt2.py  pyproject.toml
benchmarks/: benchmark_gpt2.py
src/scratchformers/models/: gpt2.py
tests/: gpt2_test.py
