[project]
name = "scratchformers"
version = "0.1.0"
description = "Transformers from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "flash-attn",
    "datasets>=4.3.0",
    "zstandard>=0.25.0",
    "pytest>=8.4.2",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[tool.ruff]
line-length = 100
